--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "blurify": "^1.2.0",
     "body-parser": "^1.19.0",
     "bouncy": "^3.2.2",
+    "chalk": "^4.1.0",
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-subdomain": "^1.0.5",
     "mongoose": "^5.9.20",
+    "port-scout": "^1.1.2",
+    "tcp-port-used": "^1.0.1",
+    "url-pattern": "^1.0.3",
     "vhost": "^3.0.2"
   },
   "devDependencies": {
