--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "",
+  "name": "urusai",
   "version": "0.1.0",
-  "description": "My full stack website for hosting on VPS",
+  "description": "A reverse-proxy that automatically launches sites.",
   "main": "server.js",
   "scripts": {
-    "install-index": "npm install --prefix client/index",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client/index",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently nodemon server.js",
+    "test": "jest",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client/index && npm run build --prefix client/index"
   },
   "author": "David John Davydov",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
     "blurify": "^1.2.0",
