--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-subdomain": "^1.0.5",
     "global": "^4.4.0",
+    "lodash.set": "^4.3.2",
     "mongoose": "^5.9.20",
     "parse-domain": "^3.0.2",
     "port-scout": "^1.1.2",
